<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="image_view">Image View</string>
    <string name="phone">650-555-5555</string>
    <string name="address2">Mountain View, CA 94043</string>
    <string name="address_1">2465 Latham St</string>
    <string name="name">Udacity</string>
    <string name="visit_udaity">Visit Udacity</string>
    <string name="url">www.udacity.com</string>
    <string name="link">
        <a  href="http:/www.udacity.com">Visit Udacity</a>
    </string>
</resources>
