<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#9E9E9E"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_300dp"
        android:contentDescription="@string/image_view"
        android:src="@drawable/udacity"
        android:layout_marginTop="@dimen/dim_8dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/identity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/image_view"
            android:src="@drawable/ic_identity"
            android:padding="@dimen/dim_4dp"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/identity"
            android:layout_toRightOf="@id/identity"
            android:padding="@dimen/dim_8dp"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dim_24sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/image_view"
            android:src="@drawable/location"
            android:padding="@dimen/dim_4dp"/>

        <TextView
            android:id="@+id/address1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/location"
            android:layout_toRightOf="@id/location"
            android:padding="@dimen/dim_8dp"
            android:text="@string/address_1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dim_24sp" />
    </RelativeLayout>


    <TextView
        android:id="@+id/address2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dim_8dp"
        android:text="@string/address2"
        android:textColor="@android:color/black"
        android:textSize="@dimen/dim_24sp"
        android:layout_marginStart="@dimen/dim_40dp"
        android:layout_marginLeft="@dimen/dim_40dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/telephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/image_view"
            android:src="@drawable/ic_action_name"
            android:padding="@dimen/dim_4dp"/>

        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/telephone"
            android:layout_toRightOf="@id/telephone"
            android:padding="@dimen/dim_8dp"
            android:text="@string/phone"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dim_24sp" />
    </RelativeLayout>

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/visit_us"
    android:text="@string/link"
    android:textSize="@dimen/dim_18sp"
    android:layout_gravity="center_horizontal"
    android:padding="@dimen/dim_8dp"
    />
</LinearLayout>
</ScrollView>
